<resources>
    <string name="app_name">Test-Cryptopia</string>
    <string name="action_settings">Settings</string>
    <string name="default_msg">Tap Below</string>
    <string name="btn_msg">Refresh</string>
    <string name="time_prefix">Updated %1$s</string>
    <string name="ask_price">Ask Price</string>
    <string name="default_pair">C1/C2</string>
    <string name="default_price">0.00</string>
    <string name="pair_prefs_file">pair_preferences</string>
    <string name="network_err">Error connecting to Cryptopia</string>
    <string name="currencies_updated">Currencies Updated</string>
    <string name="currency_symbol">Currency Symbol</string>
    <string name="currency">Currency</string>
    <string name="base_currency">Base Currency</string>
    <string name="add">Add</string>
    <string name="error_adding">Please select a valid new currency pair.</string>
    <string name="add_successful">New currency added.</string>
    <string name="remove_successful">Currency removed.</string>
</resources>
