<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="8dp"
    android:background="?android:attr/selectableItemBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:padding="16dp">

        <TextView
            android:id="@+id/pair_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:text="@string/default_pair"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/ask_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/pair_name"
            android:text="@string/ask_price" />

        <TextView
            android:id="@+id/ask_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/ask_price_label"
            android:layout_below="@+id/ask_price_label"
            android:text="@string/default_price" />

    </RelativeLayout>

</android.support.v7.widget.CardView>